# t3-opengl

./: .gitignore  CMakeLists.txt
resources/models/christmas-tree/: christmas-tree.mtl
resources/models/land/: land.mtl
resources/models/mushroom/: mushroom.mtl
resources/models/mushroom-1/: mushroom1.mtl
resources/models/mushroom-2/: mushroom2.mtl
resources/shaders/: generic_object.fs  generic_object.vs  object.fs  object.vs  skybox.fs
src/: logger.cpp  logger.h  main.cpp  scene.cpp  scene.h  window.cpp  window.h
src/assets/: assetmanager.cpp  assetmanager.h  cubemap.cpp  cubemap.h  material.cpp  material.h  model.cpp  model.h  texture.cpp  texture.h  texturestatus.h
src/light/: dirlight.cpp  dirlight.h  lightsinfo.cpp  lightsinfo.h  pointlight.cpp  pointlight.h  spotlight.cpp  spotlight.h
src/sceneobjects/: sceneobject.cpp  sceneobject.h
src/shaders/: argumenttype.h  compilestatus.h  data.cpp  data.h  drawmethod.h  program.cpp  program.h  shader.cpp  shader.h
